Making the result section more readable by putting some spaces between LI and rounding border. Fix #1

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -118,6 +118,13 @@ margin: 0;
     
 }
 
+/*Make border rounded for every line in the tree*/
+.jsonline {
+	border-radius: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
 .jsonobjname {
 	font-style: bold;
 }
@@ -134,7 +141,7 @@ margin: 0;
 }
 
 .jsondiffuntouched {
-    background-color: #DEDEDE;
+    /*background-color: #DEDEDE;*/
 }
 
 .jsondiffchanged {
@@ -144,4 +151,9 @@ margin: 0;
 .jsontype {
 	font-style: italic;
 	color: grey;
+}
+
+/*Leave space between list item*/
+#diff > ul > li {
+	margin-top: 0.1em;
 }
